--- a/package.json
+++ b/package.json
@@ -11,23 +11,30 @@
     "prisma:generate": "prisma generate --schema=prisma/user.schema.prisma",
     "prisma:push": "prisma db push --schema=prisma/user.schema.prisma"
   },
-  "keywords": ["express", "prisma", "mongodb", "jwt", "authentication"],
+  "keywords": [
+    "express",
+    "prisma",
+    "mongodb",
+    "jwt",
+    "authentication"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
     "@prisma/client": "^5.7.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.21.2",
     "express-validator": "^7.0.1",
-    "cors": "^2.8.5"
+    "jsonwebtoken": "^9.0.2",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.11",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "prisma": "^5.7.0",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.3",
-    "@types/jest": "^29.5.11"
+    "supertest": "^6.3.3"
   }
 }
